Code modernization to remove warnings.